<?xml version="1.0"?>
<package>
  <name>estimote_robotics_indoor_sdk</name>
  <version>0.4.2</version>
  <description>Estimote Robotics Indoor SDK</description>
  <maintainer email="contact@estimote.com">Estimote Tech Support</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>


  <export>
  </export>
</package>
